Bug 157173 - Enlarging Fontwork shape replaces used font
Summary: Enlarging Fontwork shape replaces used font
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: bibisected, bibisectRequest, regression
Depends on:
Blocks:
 
Reported: 2023-09-10 11:20 UTC by Regina Henschel
Modified: 2023-09-19 09:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Fontwork shape to be dragged to larger size (11.78 KB, application/vnd.oasis.opendocument.graphics)
2023-09-10 11:20 UTC, Regina Henschel
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Regina Henschel 2023-09-10 11:20:15 UTC
Created attachment 189468 [details]
Fontwork shape to be dragged to larger size

Open attached file. It has several pages with a Fontwork of one letter, based on the preset "Simple". The examples vary in the used font and whether Bold is enabled or not.

Drag the shape much larger. Notice, that at some size the font changes, in these examples from a sans font to a serif font.

The problem was reported on Ask
https://ask.libreoffice.org/t/fontworks-not-working-properly/95648
The report has a very curious example attached.

I see the problem in Version: 7.5.5.2 (X86_64) / LibreOffice Community
Build ID: ca8fe7424262805f223b9a2334bc7181abbcbf5e
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (en_US); UI: en-US
Calc: CL threaded

It was OK in Version: 6.4.5.0.0+ (x64)
Build ID: 70a2071ce91b71326659e645dd97996262ea309a
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: GL; VCL: win; 
Locale: de-DE (en_US); UI-Language: en-US
Calc: threaded
Comment 1 m_a_riosv 2023-09-10 21:05:08 UTC
Reproducible with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 65325f9c2f9aff6782fa5df910e8f2f5e63dfd93
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Vulkan; VCL: win
Locale: es-ES (es_ES); UI: en-US
Calc: CL threaded Jumbo

regression between 
Versión: 6.4.7.2 (x64)
Id. de compilación: 639b8ac485750d5696d7590a72ef1b496725cfb5
Subprocs. CPU: 16; SO: Windows 10.0 Build 22621; Repres. IU: GL; VCL: win; 
Configuración regional: es-ES (es_ES); Idioma de IU: es-ES Calc: CL
and
Version: 7.2.7.2 (x64) / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 16; OS: Windows 10.0 Build 22621; UI render: Skia/Raster; VCL: win
Locale: es-ES (es_ES); UI: es-ES Calc: CL
Comment 2 Mike Kaganski 2023-09-11 07:01:00 UTC
Regression after b153d147c9d813f78dd551fc186c261f52c929a1 (unexpectedly)
Comment 3 Commit Notification 2023-09-11 09:49:50 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/819dec3533750a3a8f483351febe40aae85ca0b7

tdf#157173 Enlarging Fontwork shape replaces used font

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2023-09-19 09:54:14 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/1db6ef546e514385058c04041fb2849411224d33

tdf#157173 Enlarging Fontwork shape replaces used font

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.